--- a/css/battle.css
+++ b/css/battle.css
@@ -1,3 +1,6 @@
+body{
+  font-size: 30px;
+}
 .layout{
   display: flex;
   flex-direction: column;
@@ -7,7 +10,6 @@
   align-content: flex-start;
   width: 1920px;
   height: 1080px;
-  font-size: 30px;
 }
 .EnemyContainer, .HeroContainer, .PasekButton{
 display: flex;
